# WhatIhavetodo

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  구조 분석 보고서.md  기능 제안서.md  디자인 정책.md  뭐해야 했더라v1.41.html  뭐해야했더라1.2.html  사용 설명서.md  시장 리서치 보고서.md
.github/workflows/: build-windows-exe.yml  win-render.yml
src/: alarms.js  app.js  backup.js  calendar.js  capture-boot.js  capture-bridge.js  capture-win.js  capture.html  datetime.js  dom-utils.js  everything.js  filters.js  form.js  index.html  main.js  placement.js  presets.js  recur-box.js  recur.js  render.js  settings-menu.js  settings.js  state.js  store.js  styles.css  ui-scale.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capture.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/db/: alarm.rs  backup.rs  error.rs  fields.rs  id_kinds.rs  items.rs  mod.rs  model.rs  presets.rs  recur_defs.rs  schema.rs  settings.rs  tests.rs
src-tauri/src/db/migrations/: 001_init.sql  002_recurrence.sql  004_recur.sql  005_assignee.sql
tests/dom/: alarms.test.js  backup.test.js  capture-bridge.test.js  capture-win.test.js  form.test.js  recur-box.test.js  render.test.js  settings.test.js  store.test.js  ui-scale.test.js
tests/helpers/: env.js
tests/unit/: datetime.test.js  filters.test.js  placement.test.js  recur.test.js  settings.test.js  state.test.js
tools/: guide-shots.mjs  win-render.mjs
